content/en/docs/v1.6/operations/services/monitoring/parameters.md
---
title: "Параметры мониторинга"
linkTitle: "Параметры"
description: "Настройка и управление параметрами мониторинга в Cozystack."
weight: 1
---
<!--
Autogenerated content. Don't edit this file directly; edit sources instead.
metadata: https://github.com/cozystack/website/blob/main/content/en/docs/v1.6/operations/services/_include/parameters.md
source: https://github.com/cozystack/cozystack/blob/release-1.6/packages/extra/monitoring/README.md
-->


## Параметры

### Общие параметры

| Имя    | Описание                                                                                              | Тип      | Значение |
| ------ | ----------------------------------------------------------------------------------------------------- | -------- | ----- |
| `host` | Hostname для внешнего доступа к Grafana (по умолчанию subdomain `grafana` для host tenant).           | `string` | `""`  |


### Конфигурация metrics storage

| Имя                                              | Описание                                    | Тип        | Значение |
| ------------------------------------------------ | ------------------------------------------- | ---------- | ------- |
| `metricsStorages`                                | Конфигурация экземпляров metrics storage.    | `[]object` | `[...]` |
| `metricsStorages[i].name`                        | Имя экземпляра storage.                      | `string`   | `""`    |
| `metricsStorages[i].retentionPeriod`             | Retention period для metrics.                | `string`   | `""`    |
| `metricsStorages[i].deduplicationInterval`       | Deduplication interval для metrics.          | `string`   | `""`    |
| `metricsStorages[i].storage`                     | Размер persistent volume.                    | `string`   | `10Gi`  |
| `metricsStorages[i].storageClassName`            | StorageClass, используемый для данных.       | `string`   | `""`    |
| `metricsStorages[i].vminsert`                    | Конфигурация vminsert.                       | `object`   | `{}`    |
| `metricsStorages[i].vminsert.minAllowed`         | Минимальные гарантированные resources.       | `object`   | `{}`    |
| `metricsStorages[i].vminsert.minAllowed.cpu`     | CPU request.                                 | `quantity` | `""`    |
| `metricsStorages[i].vminsert.minAllowed.memory`  | Memory request.                              | `quantity` | `""`    |
| `metricsStorages[i].vminsert.maxAllowed`         | Максимально разрешенные resources.           | `object`   | `{}`    |
| `metricsStorages[i].vminsert.maxAllowed.cpu`     | CPU limit.                                   | `quantity` | `""`    |
| `metricsStorages[i].vminsert.maxAllowed.memory`  | Memory limit.                                | `quantity` | `""`    |
| `metricsStorages[i].vmselect`                    | Конфигурация vmselect.                       | `object`   | `{}`    |
| `metricsStorages[i].vmselect.minAllowed`         | Минимальные гарантированные resources.       | `object`   | `{}`    |
| `metricsStorages[i].vmselect.minAllowed.cpu`     | CPU request.                                 | `quantity` | `""`    |
| `metricsStorages[i].vmselect.minAllowed.memory`  | Memory request.                              | `quantity` | `""`    |
| `metricsStorages[i].vmselect.maxAllowed`         | Максимально разрешенные resources.           | `object`   | `{}`    |
| `metricsStorages[i].vmselect.maxAllowed.cpu`     | CPU limit.                                   | `quantity` | `""`    |
| `metricsStorages[i].vmselect.maxAllowed.memory`  | Memory limit.                                | `quantity` | `""`    |
| `metricsStorages[i].vmstorage`                   | Конфигурация vmstorage.                      | `object`   | `{}`    |
| `metricsStorages[i].vmstorage.minAllowed`        | Минимальные гарантированные resources.       | `object`   | `{}`    |
| `metricsStorages[i].vmstorage.minAllowed.cpu`    | CPU request.                                 | `quantity` | `""`    |
| `metricsStorages[i].vmstorage.minAllowed.memory` | Memory request.                              | `quantity` | `""`    |
| `metricsStorages[i].vmstorage.maxAllowed`        | Максимально разрешенные resources.           | `object`   | `{}`    |
| `metricsStorages[i].vmstorage.maxAllowed.cpu`    | CPU limit.                                   | `quantity` | `""`    |
| `metricsStorages[i].vmstorage.maxAllowed.memory` | Memory limit.                                | `quantity` | `""`    |


### Конфигурация logs storage

| Имя                                | Описание                                 | Тип        | Значение     |
| ---------------------------------- | ---------------------------------------- | ---------- | ------------ |
| `logsStorages`                     | Конфигурация экземпляров logs storage.   | `[]object` | `[...]`      |
| `logsStorages[i].name`             | Имя экземпляра storage.                  | `string`   | `""`         |
| `logsStorages[i].retentionPeriod`  | Retention period для logs.               | `string`   | `1`          |
| `logsStorages[i].storage`          | Размер persistent volume.                | `string`   | `10Gi`       |
| `logsStorages[i].storageClassName` | StorageClass, используемый для хранения данных. | `string`   | `replicated` |


### Конфигурация Alerta

| Имя                                       | Описание                                                              | Тип        | Значение |
| ----------------------------------------- | --------------------------------------------------------------------- | ---------- | ------- |
| `alerta`                                  | Конфигурация сервиса Alerta.                                          | `object`   | `{}`    |
| `alerta.storage`                          | Размер persistent volume для database.                                | `string`   | `10Gi`  |
| `alerta.storageClassName`                 | StorageClass, используемый для database.                              | `string`   | `""`    |
| `alerta.resources`                        | Конфигурация resources.                                               | `object`   | `{}`    |
| `alerta.resources.requests`               | Resource requests.                                                    | `object`   | `{}`    |
| `alerta.resources.requests.cpu`           | CPU request.                                                          | `quantity` | `100m`  |
| `alerta.resources.requests.memory`        | Memory request.                                                       | `quantity` | `256Mi` |
| `alerta.resources.limits`                 | Resource limits.                                                      | `object`   | `{}`    |
| `alerta.resources.limits.cpu`             | CPU limit.                                                            | `quantity` | `1`     |
| `alerta.resources.limits.memory`          | Memory limit.                                                         | `quantity` | `1Gi`   |
| `alerta.alerts`                           | Конфигурация alert routing.                                           | `object`   | `{}`    |
| `alerta.alerts.telegram`                  | Конфигурация Telegram alerts.                                         | `object`   | `{}`    |
| `alerta.alerts.telegram.token`            | Telegram bot token.                                                   | `string`   | `""`    |
| `alerta.alerts.telegram.chatID`           | Telegram chat ID(s), разделенные запятыми.                            | `string`   | `""`    |
| `alerta.alerts.telegram.disabledSeverity` | Список severities без alerts, например ["informational","warning"].   | `[]string` | `[]`    |
| `alerta.alerts.slack`                     | Конфигурация Slack alerts.                                            | `object`   | `{}`    |
| `alerta.alerts.slack.url`                 | Configuration URI для Slack alerts.                                   | `string`   | `""`    |
| `alerta.alerts.slack.disabledSeverity`    | Список severities без alerts, например ["informational","warning"].   | `[]string` | `[]`    |


### Конфигурация Grafana

| Имя                                 | Описание                                 | Тип        | Значение |
| ----------------------------------- | ---------------------------------------- | ---------- | ------- |
| `grafana`                           | Конфигурация Grafana.                    | `object`   | `{}`    |
| `grafana.db`                        | Конфигурация database.                   | `object`   | `{}`    |
| `grafana.db.size`                   | Размер persistent volume для database.   | `string`   | `10Gi`  |
| `grafana.resources`                 | Конфигурация resources.                  | `object`   | `{}`    |
| `grafana.resources.requests`        | Resource requests.                       | `object`   | `{}`    |
| `grafana.resources.requests.cpu`    | CPU request.                             | `quantity` | `100m`  |
| `grafana.resources.requests.memory` | Memory request.                          | `quantity` | `256Mi` |
| `grafana.resources.limits`          | Resource limits.                         | `object`   | `{}`    |
| `grafana.resources.limits.cpu`      | CPU limit.                               | `quantity` | `1`     |
| `grafana.resources.limits.memory`   | Memory limit.                            | `quantity` | `1Gi`   |


### Конфигурация Vmagent

| Имя                      | Описание                                 | Тип      | Значение |
| ------------------------ | ---------------------------------------- | -------- | ----- |
| `vmagent`                | Конфигурация VictoriaMetrics Agent.      | `object` | `{}`  |
| `vmagent.externalLabels` | External labels, применяемые ко всем metrics. | `object` | `{}`  |
| `vmagent.remoteWrite`    | Конфигурация remote write.               | `object` | `{}`  |

### OIDC authentication

| Name                               | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | Type       | Value  |
| ---------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------- | ------ |
| `oidc`                             | OIDC authentication for the Grafana instance. See docs/oidc-grafana.md for the operator guide.                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | `object`   | `{}`   |
| `oidc.mode`                        | Identity mode. `None`: no OIDC, only the `grafana-admin-password` Secret works. `System`: trust the platform `cozy` realm via a per-instance confidential client and audience binding; zero-config default. `CustomConfig`: trust a tenant-supplied issuer directly (BYO); `cozy` is not in the path.                                                                                                                                                                                                                                                                     | `string`   | `None` |
| `oidc.customConfig`                | Tenant-supplied `[auth.generic_oauth]` payload; consumed only when `mode: CustomConfig`.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | `object`   | `{}`   |
| `oidc.customConfig.config`         | Inline map of `[auth.generic_oauth]` keys. Written verbatim into the Grafana CR `spec.config`. Mutually exclusive with `secretRef.name`.                                                                                                                                                                                                                                                                                                                                                                                                                                  | `object`   | `{}`   |
| `oidc.customConfig.secretRef`      | Reference to a Secret holding an `auth.ini` fragment; mounted under `/etc/grafana/oidc` and loaded via `GF_PATHS_CUSTOM_INI`.                                                                                                                                                                                                                                                                                                                                                                                                                                             | `object`   | `{}`   |
| `oidc.customConfig.secretRef.name` | Name of an existing Secret in the release namespace whose `auth.ini` key holds a ready-made `[auth.generic_oauth]` block. Mutually exclusive with `customConfig.config`.                                                                                                                                                                                                                                                                                                                                                                                                  | `string`   | `""`   |
| `oidc.users`                       | Users granted access to this Grafana instance's org. Each entry is reconciled into Grafana org membership + role by a chart-owned post-install/post-upgrade Job. Works for both `System` and `CustomConfig` modes; ignored when `mode: None`. Users not listed here get nothing (no default org role from group mapping).                                                                                                                                                                                                                                                 | `[]object` | `[]`   |
| `oidc.users[i].email`              | Email address matched against the `email` claim from the issuer. The chart pre-provisions a Grafana account with this email so the users-Job can set the org role before the operator's first login (`oauth_allow_insecure_email_lookup = true` glues the two together). Must match a conservative pattern: local part is `[A-Za-z0-9._%+-]+`, domain is `[A-Za-z0-9.-]+\.[A-Za-z]{2,}`. Whitespace, quoted literals, and unusual URL-reserved characters are rejected on schema level so the reconcile-Job's shell handling never has to defend against malformed input. | `string`   | `""`   |
| `oidc.users[i].role`               | Grafana org role to bind: `Admin`, `Editor`, or `Viewer`. Applied to the release's Grafana org (`Main Org.`); server-level `GrafanaAdmin` promotion is out of scope for Phase 1. Required — the users-Job POSTs `{loginOrEmail, role}` to `/api/orgs/1/users` and PATCHes `{role}` to converge across re-runs; omitting the field would render `role: "null"` into the body and fail with HTTP 400.                                                                                                                                                                     | `string`   | `{}`   |

